--- a/src/html/style.css
+++ b/src/html/style.css
@@ -1,11 +1,11 @@
 
+/* КЛАССЫ НАЧАЛЬНОЙ СТРАНИЦЫ */
 .body{
-background: #639643 url("img/test.jpg");
+    background: #639643 url("img/test.jpg");
     width: 100%;
     flex-wrap: wrap;
     margin: auto;
     display: inline-block;
-
 }
 .body a{display: inline}
 
@@ -17,6 +17,7 @@ background: #639643 url("img/test.jpg");
     justify-content:center;
     position: fixed;
 }
+
 .submenu{
     display: flex;
     position: fixed;
@@ -25,7 +26,19 @@ background: #639643 url("img/test.jpg");
     align-items: center;
 }
 
-#logo:hover{background-color: rgba(255, 255, 255, 0);}
+a { text-decoration: none}
+.name{
+    color: aliceblue;
+    font-family: 'Ubuntu', sans-serif;
+    flex-direction: row;
+}
+.name:hover{background-color: rgba(255, 255, 255, 0);}
+
+.logo{
+    width: 30px;
+}
+.logo:hover{background-color: rgba(255, 255, 255, 0);}
+
 .accent{
     background-color: aliceblue;
     color: #639643;
@@ -39,15 +52,6 @@ background: #639643 url("img/test.jpg");
     background-color: #ffffff;
     color: #71af4e;
 }
-.logo{
-    width: 30px;
-}
-.name{
-    color: aliceblue;
-    font-family: 'Ubuntu', sans-serif;
-    flex-direction: row;
-}
-.name:hover{background-color: rgba(255, 255, 255, 0);}
 
 .block{
     font-family: 'Ubuntu', sans-serif;
@@ -63,6 +67,12 @@ background: #639643 url("img/test.jpg");
     padding: 8px;
     border: aliceblue;
     border-radius: 5px;}
+
+.dropdownMenu {
+    position: relative;
+    display: inline-block;
+}
+
 .menubtn {
     background-color: rgba(240, 248, 255, 0);
     color: #639643;
@@ -71,10 +81,14 @@ background: #639643 url("img/test.jpg");
     border-radius: 5px;
     font-family: 'Ubuntu', sans-serif;
 }
-.dropdownMenu {
-    position: relative;
-    display: inline-block;
+
+.img{
+    border-radius: 100px; /* Радиус скругления */
+    border: 3px solid #639643; /* Параметры рамки */
+    box-shadow: 0 0 7px #666; /* Параметры тени */
+    width: 50px;
 }
+
 .dropdownMenu-content {
     display: none;
     position: absolute;
@@ -94,26 +108,15 @@ background: #639643 url("img/test.jpg");
 }
 a:hover{background-color: #bbbec4; border:#bbbec4; border-radius: 5px }
 .dropdownMenu:hover .dropdownMenu-content {display: block; }
-.dropdownMenu:hover .menubtn {background-color: aliceblue; border: aliceblue; border-radius: 5px 5px 0 0
-}
+.dropdownMenu:hover .menubtn {background-color: aliceblue; border: aliceblue; border-radius: 5px 5px 0 0}
 
-
-.img{
-    border-radius: 100px; /* Радиус скругления */
-    border: 3px solid #639643; /* Параметры рамки */
-    box-shadow: 0 0 7px #666; /* Параметры тени */
-    width: 50px;
-}
 
 .main{
-
     display: flex;
     position: fixed;
     left: 318px;
     margin: 260px 0 0 0;
     width: 800px;
-
-
 }
 
 .subMain {
@@ -128,7 +131,6 @@ a:hover{background-color: #bbbec4; border:#bbbec4; border-radius: 5px }
     justify-content: space-between;
     align-items: center;
     flex-direction: column;
-
 }
 
 #text1 {
@@ -140,7 +142,6 @@ a:hover{background-color: #bbbec4; border:#bbbec4; border-radius: 5px }
 }
 
 #text2 {
-
     display: flex;
     position: fixed;
     top: 173px;
@@ -152,7 +153,6 @@ a:hover{background-color: #bbbec4; border:#bbbec4; border-radius: 5px }
     font-family: 'Ubuntu', sans-serif;
     width: 100px;
 }
-
 #text2:hover{background-color: #ffffff;
     color:#71af4e }
 
@@ -178,8 +178,6 @@ a:hover{background-color: #bbbec4; border:#bbbec4; border-radius: 5px }
     display: inline-block;
     width: 48%;
     vertical-align: top;
-
-
 }
 .info1 {
     font-family: 'Ubuntu', sans-serif;
@@ -189,10 +187,162 @@ a:hover{background-color: #bbbec4; border:#bbbec4; border-radius: 5px }
     width: 150px;
     vertical-align: top;
 }
+.info1:hover{background-color: aliceblue}
 
 #img1 {
     width: 30px;
     display: flex;
     position: center;
     margin: 15px ;
+}
+
+/* КЛАССЫ ПОИСКА ИГР */
+
+.gameBody{
+    background: #e4e7ea;
+    width: 100%;
+    flex-wrap: wrap;
+    margin: auto;
+    display: inline-block;
+}
+.gameBody a{display: inline}
+
+.gameMenu{
+    background-color: aliceblue;
+    width: 100%;
+    height: 70px;
+    display: flex;
+    justify-content:center;
+    position: fixed;
+    z-index: 1;
+}
+
+.gameName {
+    color: #344f21;
+    font-family: 'Ubuntu', sans-serif;
+    flex-direction: row;
+}
+.gameName:hover{background-color: rgba(255, 255, 255, 0);}
+
+.gameAccent {
+    background-color: #71af4e;
+    color: aliceblue;
+    padding: 8px;
+    border: #71af4e;
+    border-radius: 5px;
+    font-family: 'Ubuntu', sans-serif;
+    flex-direction: row;
+}
+.gameAccent:hover{
+    background-color: #7bc256;
+    color: aliceblue;
+}
+
+.gameBlock {
+    font-family: 'Ubuntu', sans-serif;
+    color: #344f21;
+    background-color: rgba(240, 248, 255, 0.2);
+    padding: 8px;
+    border: aliceblue;
+    border-radius: 5px;
+}
+.gameBlock:hover{
+    color: #565555;
+    background-color: #d5d7e0;
+    padding: 8px;
+    border: aliceblue;
+    border-radius: 5px;
+}
+
+.gameDropdownMenu {
+    position: relative;
+    display: inline-block;
+}
+
+.gameMenubtn {
+    background-color: rgba(240, 248, 255, 0);
+    color: #639643;
+    padding: 8px;
+    border: rgba(240, 248, 255, 0);
+    border-radius: 5px;
+    font-family: 'Ubuntu', sans-serif;
+}
+
+.gameDropdownMenu-content {
+    display: none;
+    position: absolute;
+    background-color: aliceblue;
+    padding: 8px;
+    border-radius: 0 5px 5px 5px;
+    min-width: 160px;
+    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+    font-family: 'Ubuntu', sans-serif;
+}
+
+.gameDropdownMenu-content a{
+    color: #344f21;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+}
+
+.gameDropdownMenu:hover .gameDropdownMenu-content {display: block; }
+.gameDropdownMenu:hover .gameMenubtn {background-color: aliceblue; border: aliceblue; border-radius: 5px 5px 0 0; }
+
+.gameMain{
+    display: flex;
+    position: absolute;
+    top: 100px;
+    left: 395px;
+    width: 800px;
+    flex-flow: column;
+}
+
+.gameSubMain1 {
+    background-color: aliceblue;
+    display: flex;
+    width: 700px;
+    left: 300px;
+    height: 80px;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0 20px 0 20px;
+    margin: 0 0 2px 0;
+    border-radius: 5px;
+    border: rgba(240, 248, 255, 0);
+}
+
+.gameSubMain2 {
+    background-color: aliceblue;
+    display: flex;
+    width: 700px;
+    left: 300px;
+    height: 100px;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0 20px 0 20px;
+    border-radius: 5px;
+    border: rgba(240, 248, 255, 0);
+    margin: 0 0 1px 0;
+}
+
+.default {
+    font-family: 'Ubuntu', sans-serif;
+    flex-direction: row;
+    color: #344f21;
+    font-size: 20px;
+}
+
+.findGame{
+    font-family: 'Ubuntu', sans-serif;
+    flex-direction: row;
+    color: #639643;
+}
+
+.imgPlus{
+    border-radius: 100px; /* Радиус скругления */
+    border: 3px solid aliceblue; /* Параметры рамки */
+    box-shadow: 0 0 7px rgba(102, 102, 102, 0); /* Параметры тени */
+    width: 70px;
+    height: 70px;
 }
