controller and html fix

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -1,7 +1,7 @@
 
 /* КЛАССЫ НАЧАЛЬНОЙ СТРАНИЦЫ */
 .body{
-    background: #639643 url("img/test.jpg");
+    background: #639643 url{[[@{/img/test.jpg}]]} ;
     width: 100%;
     flex-wrap: wrap;
     margin: auto;
