--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Carcassonne - онлайн игра</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" th:href="@{/css/style.css}">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@500&display=swap" rel="stylesheet">
@@ -13,15 +13,15 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200&family=Ubuntu:wght@500&display=swap" rel="stylesheet">
 </head>
-<body class="body">
+<body class="body" th:style="'background: url(/img/test.jpg)  center center fixed;'">
 <div class="menu">
     <div class="submenu">
-        <a href="index.html" class="name"><img class = logo src="img/logo.png">Carcassonne Online</a>
+        <a href="index.html" class="name"><img class = logo th:src="@{/img/logo.png}" >Carcassonne Online</a>
         <a href="gameLobby.html" class="accent">ПОИСК ИГР</a>
         <a class="block" >Друзья</a>
         <a href="#cont" class="block">Контакты</a>
         <div class="dropdownMenu">
-            <button class="menubtn"><img class="img" src="img/avatar.jpg"></button>
+            <button class="menubtn"><img class="img"  th:src="@{/img/avatar.jpg}"></button>
             <div class="dropdownMenu-content">
                 <a href="#">Иванов Иван</a>
                 <a href="#">Рейтинг - 0</a>
@@ -42,7 +42,7 @@
         <div class="subFooter">
             <div class="info">Сайт разработан в учебных целях в рамках РГР по дисциплине "Технологии и методы программирования"</div>
             <div class="info1">Разработчики Максутов Ильдар Бахмацкий Юрий Иванов Максим</div>
-            <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQinfo1" target="_blank" class="info1">Соцсети<img id="img1" src="img/vk.png"> </a>
+            <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQinfo1" target="_blank" class="info1">Соцсети<img id="img1" th:src="@{/img/vk.png}" > </a>
         </div>
     </div>
 
