--- a/src/main/resources/templates/gameLobby.html
+++ b/src/main/resources/templates/gameLobby.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <title>Поиск игр</title>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet"  th:href="@{/css/style.css}">
+    <link rel="shortcut icon" href="img/favicon.png" type="image/png">
+  <link rel="stylesheet" href="style.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@500&display=swap" rel="stylesheet">
@@ -18,12 +19,12 @@
         <div class="submenu">
             <a href="index.html" class="gameName"><img class = logo src="img/gameLogo.png">Carcassonne Online</a>
             <a href="gameLobby.html" class="gameAccent">ПОИСК ИГР</a>
-            <a class="gameBlock" >Друзья</a>
+            <a href="friends.html"class="gameBlock" >Друзья</a>
             <a href="#cont" class="gameBlock">Контакты</a>
             <div class="gameDropdownMenu">
                 <button class="gameMenubtn"><img class="img" src="img/avatar.jpg"></button>
                 <div class="gameDropdownMenu-content">
-                    <a href="#">Иванов Иван</a>
+                    <a href="profile.html">Иванов Иван</a>
                     <a href="#">Рейтинг - 0</a>
                     <a href="#">Выйти</a>
                 </div>
