--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -16,7 +16,7 @@
 <body class="body" th:style="'background: url(/img/test.jpg)  center center fixed;'">
 <div class="menu">
     <div class="submenu">
-        <a href="index.html" class="name"><img class = logo th:src="@{/img/logo.png}" >Carcassonne Online</a>
+        <a th:href="@{/}" class="name"><img class = logo th:src="@{/img/logo.png}" >Carcassonne Online</a>
         <a href="gameLobby.html" class="accent">ПОИСК ИГР</a>
         <a class="block" >Друзья</a>
         <a href="#cont" class="block">Контакты</a>
