--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -17,13 +17,13 @@
 <div class="menu">
     <div class="submenu">
         <a th:href="@{/}" class="name"><img class = logo th:src="@{/img/logo.png}" >Carcassonne Online</a>
-        <a href="gameLobby.html" class="accent">ПОИСК ИГР</a>
+        <a th:href="@{/gameLobby}"  class="accent">ПОИСК ИГР</a>
         <a class="block" >Друзья</a>
         <a href="#cont" class="block">Контакты</a>
         <div class="dropdownMenu">
             <button class="menubtn"><img class="img"  th:src="@{/img/avatar.jpg}"></button>
             <div class="dropdownMenu-content">
-                <a href="#">Иванов Иван</a>
+                <a th:href="@{/profile}">Иванов Иван</a>
                 <a href="#">Рейтинг - 0</a>
                 <a href="#">Выйти</a>
             </div>
