--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -1,8 +1,10 @@
 
 /* КЛАССЫ НАЧАЛЬНОЙ СТРАНИЦЫ */
 .body{
-    background: #639643 url("img/test.jpg");
-    width: 100%;
+    background: #639643;
+    background-size: cover;
+    width: 100vw;
+    height: 115vh;
     flex-wrap: wrap;
     margin: auto;
     display: inline-block;
@@ -12,8 +14,8 @@
 .menu{
     background-color: #71af4e;
     top: 0;
-    width: 100%;
-    height: 10%;
+    width: calc(1840 / 1840 * 100%);
+    height: 10vh;
     display: flex;
     justify-content:center;
     position: fixed;
@@ -22,7 +24,8 @@
 .submenu{
     display: flex;
     position: fixed;
-    width: 60%;
+    width: calc(1000 / 1840 * 100%);
+    height: 10vh;
     justify-content: space-between;
     align-items: center;
 }
@@ -31,23 +34,36 @@ a { text-decoration: none}
 .name{
     color: aliceblue;
     font-family: 'Ubuntu', sans-serif;
-    flex-direction: row;
+    width: 12vw;
+    min-width: 12vw;
+    max-width: 12vw;
+    min-height:4vh ;
+    max-height: 4vh;
+    height: 4vh;
+    font-size: 1vw;
 }
 .name:hover{background-color: rgba(255, 255, 255, 0);}
 
 .logo{
-    width: 30px;
+    width: 2vw;
+    height: 4vh;
 }
 .logo:hover{background-color: rgba(255, 255, 255, 0);}
 
 .accent{
     background-color: aliceblue;
     color: #639643;
-    padding: 8px;
+    font-family: 'Ubuntu', sans-serif;
+    padding: 1%;
     border: aliceblue;
     border-radius: 5px;
-    font-family: 'Ubuntu', sans-serif;
-    flex-direction: row;
+    width: 6vw;
+    min-width: 6vw;
+    max-width: 6vw;
+    min-height: 3vh ;
+    max-height: 3vh;
+    height: 3vh;
+    font-size: 1vw;
 }
 .accent:hover{
     background-color: #ffffff;
@@ -58,9 +74,17 @@ a { text-decoration: none}
     font-family: 'Ubuntu', sans-serif;
     color: aliceblue;
     background-color: rgba(240, 248, 255, 0.2);
-    padding: 8px;
+    padding: 1%;
     border: aliceblue;
     border-radius: 5px;
+    width: 6vw;
+    min-width: 6vw;
+    max-width: 6vw;
+    min-height:4vh ;
+    max-height: 4vh;
+    height: 4vh;
+    font-size: 1vw;
+    text-align: center;
 }
 .block:hover{
     color: #ffffff;
@@ -70,54 +94,103 @@ a { text-decoration: none}
     border-radius: 5px;}
 
 .dropdownMenu {
-    position: relative;
+
     display: inline-block;
+    width: 6vw;
+    min-width: 6vw;
+    max-width: 6vw;
+    min-height:10vh ;
+    max-height: 10vh;
+    height: 10vh;
+    align-items: center;
+    font-size: 1vw;
 }
 
 .menubtn {
-    background-color: rgba(240, 248, 255, 0);
-    color: #639643;
-    padding: 8px;
+    background-color: #71af4e;
+    padding: 1%;
     border: rgba(240, 248, 255, 0);
     border-radius: 5px;
     font-family: 'Ubuntu', sans-serif;
+    min-width: 6vw;
+    max-width: 6vw;
+    width: 6vw;
+    min-height:10vh ;
+    max-height: 10vh;
+    height: 10vh;
+    vertical-align: middle;
+    margin-left: auto;
+    margin-right: auto;
+
 }
 
 .img{
-    border-radius: 100px; /* Радиус скругления */
-    border: 3px solid #639643; /* Параметры рамки */
-    box-shadow: 0 0 7px #666; /* Параметры тени */
-    width: 50px;
+    border-radius: 100%; /* Радиус скругления */
+    width: 4vw;
+    min-width: 4vw;
+    max-width: 4vw;
+    margin: 0;
+    position: absolute;
+    top: 50%;
+    transform: translate(-50%, -50%)
 }
 
 .dropdownMenu-content {
     display: none;
-    position: absolute;
+    position: static;
     background-color: aliceblue;
-    padding: 8px;
-    border-radius: 0 5px 5px 5px;
-    min-width: 160px;
+    padding: 1%;
+    border-radius: 0 1% 1% 1%;
+    min-width: 10vw;
+    max-width: 10vw;
+    width: 10vw;
+    min-height:18vh ;
+    max-height: 18vh;
+    height: 18vh;
     box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
     z-index: 1;
     font-family: 'Ubuntu', sans-serif;
+    justify-content: left;
 }
 .dropdownMenu-content a {
     color: black;
-    padding: 12px 16px;
+    padding: 8.5% 9%;
     text-decoration: none;
     display: block;
+    background-color: rgba(255, 20, 147, 0);
+    width: 8vw;
+    min-width: 8vw;
+    max-width: 8vw;
+    min-height: 3vh ;
+    max-height: 3vh;
+    height: 3vh;
+    font-size: 1vw;
 }
 a:hover{background-color: #bbbec4; border:#bbbec4; border-radius: 5px }
-.dropdownMenu:hover .dropdownMenu-content {display: block; }
-.dropdownMenu:hover .menubtn {background-color: aliceblue; border: aliceblue; border-radius: 5px 5px 0 0}
+.dropdownMenu:hover .dropdownMenu-content {
+    display: block;
+    position: fixed;
+}
+.dropdownMenu:hover .menubtn {
+    background-color: aliceblue;
+    border: aliceblue;
+    border-radius: 5px 5px 0 0;
+    min-width: 6vw;
+    max-width: 6vw;
+    width: 6vw;
+    min-height:10vh ;
+    max-height: 10vh;
+    height: 10vh;
+    align-items: center;
+    justify-content: center;
+}
 
 
 .main{
     display: flex;
     position: fixed;
-    top: 40%;
-    left: 20%;
-    width: 800px;
+    top: 35vh;
+    left: 24vw;
 }
 
 .subMain {
@@ -128,7 +201,12 @@ a:hover{background-color: #bbbec4; border:#bbbec4; border-radius: 5px }
     border-radius: 10px;
     display: flex;
     position: fixed;
-    width: 900px;
+    width: 50vw;
+    min-width: 50vw;
+    max-width:50vw;
+    min-height:35vh ;
+    max-height: 35vh;
+    height: 35vh;
     justify-content: space-between;
     align-items: center;
     flex-direction: column;
@@ -137,22 +215,30 @@ a:hover{background-color: #bbbec4; border:#bbbec4; border-radius: 5px }
 #text1 {
     font-family: 'Ubuntu', sans-serif;
     color: aliceblue;
-    font-size: 40px;
-    padding: 100px;
+    font-size: 2vw;
+    padding: 10%;
     text-align: center;
 }
 
 #text2 {
     display: flex;
     position: fixed;
-    top: 173px;
+    top: 23vh;
     background-color: aliceblue;
     color: #639643;
-    padding: 8px;
+    padding: 2%;
     border: aliceblue;
     border-radius: 5px;
     font-family: 'Ubuntu', sans-serif;
-    width: 100px;
+    width: 10vw;
+    min-width: 10vw;
+    max-width:10vw;
+    min-height:4vh ;
+    max-height: 4vh;
+    height: 4vh;
+    font-size: 1vw;
+    justify-content: center;
+    align-items: center;
 }
 #text2:hover{background-color: #ffffff;
     color:#71af4e }
@@ -161,8 +247,8 @@ a:hover{background-color: #bbbec4; border:#bbbec4; border-radius: 5px }
     background-color: aliceblue;
     width: 100%;
     position: absolute;
-    top: 100%;
-    height: 100px;
+    top: 105%;
+    height: 15vh;
     display: flex;
     justify-content:center;
 }
@@ -172,30 +258,33 @@ a:hover{background-color: #bbbec4; border:#bbbec4; border-radius: 5px }
     align-items: center;
     white-space: nowrap;
     justify-content: space-between;
+    width: 60%;
 }
 .info {
     font-family: 'Ubuntu', sans-serif;
     color: #344f21;
     white-space: normal;
     display: inline-block;
-    width: 48%;
+    width: 20vw;
     vertical-align: top;
+    font-size: 2vh;
 }
 .info1 {
     font-family: 'Ubuntu', sans-serif;
     color: #344f21;
     white-space: normal;
     display: inline-block;
-    width: 150px;
+    width: 10vw;
     vertical-align: top;
+    font-size: 2vh;
 }
 .info1:hover{background-color: aliceblue}
 
 #img1 {
-    width: 30px;
+    width: 1.8vw;
     display: flex;
     position: center;
-    margin: 15px ;
+    margin: 1vw ;
 }
 
 /* КЛАССЫ ПОИСКА ИГР */
