--- a/src/main/resources/templates/user/registration.html
+++ b/src/main/resources/templates/user/registration.html
@@ -4,37 +4,52 @@
 	>
 
 <head>
-  <title th:text="Registration">User Login Page</title>
+	<title>Регистрация</title>
+	<link rel="stylesheet" th:href="@{/css/style.css}">
+	<meta charset="UTF-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="shortcut icon" th:href="@{/img/favicon.png}" type="image/png">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@500&display=swap" rel="stylesheet">
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200&family=Ubuntu:wght@500&display=swap" rel="stylesheet"><meta charset="UTF-8">
 </head>
 
-<body>
+<body class="authBody">
+<div class="auth1">
+	<h1 class="defaultReg">Регистрация</h1>
 
-		<h1 th:text="${'User Registration'}">User Login Page</h1>
+	<form th:action="@{/user/registration}" th:method="post" th:object="${userForm}" autocomplete="off">
+		<div class="form-group">
+			<label>Логин: </label>
+			<input class="form-group" placeholder="например, 1@carc.me" checked="text" th:field="*{email}" autocomplete="false">
+			<span th:errors="*{email}"></span>
+		</div>
 
-		<form th:action="@{/user/registration}" th:method="post" th:object="${userForm}" autocomplete="off">
-			<div>
-				<label>Email: </label>
-				<input type="text" th:field="*{email}" autocomplete="false">
-				<span th:errors="*{email}"></span>
-			</div>
+		<div class="form-group">
+			<label>Никнейм: </label>
+			<input class="form-group"  placeholder="например, суперИгрок500"type="text" th:field="*{name}" autocomplete="false">
+			<span th:errors="*{name}"></span>
+		</div>
 
-            <div>
-                <label>Name: </label>
-                <input type="text" th:field="*{name}" autocomplete="false">
-                <span th:errors="*{name}"></span>
-            </div>
+		<div class="form-group">
+			<label>Пароль: </label>
+			<input type="password" class="form-group"  placeholder="например, 12345" th:field="*{password}" autocomplete="false">
+			<span th:errors="*{password}"></span>
+		</div>
 
-			<div>
-				<label>Password: </label>
-				<input type="password" th:field="*{password}" autocomplete="false">
-				<span th:errors="*{password}"></span>
-			</div>
+		<div class="form-group">
+			<input type="submit" name="login-submit" id="login-submit"
+				   class="stdBtn" value="зарегистрироваться">
+		</div>
+	</form>
+</div>
 
-			<div class="form-group">
-				<input type="submit" name="login-submit" id="login-submit"
-					class="stdBtn" value="Log In">
-			</div>
-		</form>
+
 
 
 </body>
