добавил поисковую строку

--- a/src/main/resources/templates/friends.html
+++ b/src/main/resources/templates/friends.html
@@ -37,6 +37,10 @@
 </div>
 <div class="gameMain">
   <div class="gameSubMain1">
+    <div class="findButton"> Поиск </div>
+    <div><input type="text" autocomplete="off" class="finder"></div>
+  </div>
+  <div class="gameSubMain1">
     <div class="default"> Друзья </div>
     <a class="playerName">Иванов Иван</a>
   </div>
