--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -752,3 +752,38 @@ a:hover{background-color: #bbbec4; border:#bbbec4; border-radius: 5px }
     align-items: center;
     justify-content: center;
 }
+
+.finder {
+    font-family: 'Ubuntu', sans-serif;
+    text-align: start;
+    color: #344f21;
+    font-size: 2.2vw;
+    padding: 1%;
+    border: #344f21;
+
+}
+
+.findButton{
+
+    font-family: 'Ubuntu', sans-serif;
+    flex-direction: row;
+    color: #344f21;
+    font-size: 3vh;
+    width: 11vw;
+    min-width: 11vw;
+    max-width: 11vw;
+    min-height:4vh ;
+    max-height: 4vh;
+    height: 4vh;
+    text-align: center;
+    padding: 1%;
+}
+.findButton:hover{
+    background-color: #71af4e;
+    color: aliceblue;
+    font-family: 'Ubuntu', sans-serif;
+    padding: 1%;
+    border: #71af4e;
+    border-radius: 1vw;
+    text-align: center;
+}
